--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="js/states/Boot.js"></script>
 	<script type="text/javascript" src="js/states/Load.js"></script>
 	<script type="text/javascript" src="js/states/MainMenu.js"></script>
+	<script type="text/javascript" src="js/states/Tutorial.js"></script>
 	<script type="text/javascript" src="js/states/BossLevel.js"></script>
 	<script type="text/javascript" src="js/states/GameOver.js"></script>
 	<script type="text/javascript" src="js/prefabs/PlayerShip.js"></script>
